<resources>
    <string name="app_name">Pickup Sports</string>
    <string name="session_expired">session_expired</string>
    <string name="alert">Alert</string>
    <string name="post_detail">Post Detail</string>
    <string name="please_try_again">Please try again</string>
    <string name="plz_wait">Plz wait</string>
    <string name="error_found">Error Found</string>
    <string name="forgot_password"><u>Forgot Password ?</u></string>
    <string name="or_login"><u>or login with</u></string>
    <string name="hello_blank_fragment">Home Seeker fragment</string>
    <string name="fav_fragment">Fav  fragment</string>
    <string name="title_activity_job_deatils">JobDeatilsActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="api_key">AIzaSyC-wzD2OUDaWKiOTEnzPm_ZBk6QcJWxkpY</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tv1">SQR code will get generated for you and you are good to accept payments from customers</string>
    <string name="third_step">send audio and notes and in return get positive notes from customer</string>
    <string name="otp_text">Please enter the 6-digit code sent to your phone number +91XXXXXX7890 for verification.</string>
    <string name="sign_up"><u>SIGN UP</u></string>
    <string name="pickup_sports">Pickup Sports</string>
    <string name="earn_money_host_games_refer_friends_earn_money">Host Games! Earn Money! Refer Friends! Earn Money!</string>
    <string name="kristin_watson">Kristin Watson</string>
    <string name="select_a_sport">Select a Sport</string>
    <string name="arm_wrestling">Arm Wrestling</string>
    <string name="location">Location</string>
    <string name="search_by_city_neighbourhood_or_zip_code">Search by city, neighbourhood or ZIP code</string>
    <string name="account">Account</string>
    <string name="sohanur_rahman">Sohanur Rahman</string>
    <string name="_4_7">4.7</string>
    <string name="_50_ratings">(50 Ratings)</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="personal_info">Personal Info.</string>
    <string name="save_changes">Save Changes</string>
    <string name="change_password">Change Password</string>
    <string name="settings">Settings</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_you_account_permanently">Delete you account permanently</string>
    <string name="help">Help</string>
    <string name="have_an_issue_or_questions_request_a_refund">HAVE AN ISSUE OR QUESTIONS? \nREQUEST A REFUND?</string>
    <string name="email_us">Email Us</string>
    <string name="support_pickup_sports_com">support@pickup-sports.com</string>
    <string name="custom_local_radius">Custom local radius</string>
    <string name="only_show_me_games_within_a_specific_distance">Only show me games within a specific distance</string>
    <string name="_31_mi">31 mi</string>
    <string name="apply">Apply</string>
    <string name="january_3_friday">January 3, Friday</string>
    <string name="basketball">Basketball</string>
    <string name="los_angeles">Los Angeles</string>
    <string name="_2_miles">(2 miles)</string>
    <string name="_7_00pm">7:00PM</string>
    <string name="_4_5">4.5</string>
    <string name="alex">Alex</string>
    <string name="_12_50">$12.50</string>
    <string name="indoor_3x3">Indoor  3x3</string>
    <string name="_11_15">11/15</string>
    <string name="pickup_soccer_9_v_9_co_ed">Pickup Soccer 9 v 9 CO-ED</string>
    <string name="kenny">Kenny</string>
    <string name="_6_00_pm_oct_3">6:00 PM, Oct 3</string>
    <string name="_120_minutes">120 minutes</string>
    <string name="min_5_player_needed_for_game">Min. 5 player needed for game</string>
    <string name="_14035_crenshaw_blvd_hawthorne_ca_90250">14035 Crenshaw Blvd, Hawthorne, CA 90250</string>
    <string name="about_game">About Game</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_interdum_sodales_duis_egestas_a_nulla_aliquam_lacinia_eu_elementum_blandit_nisl_ut_scelerisque_nulla_at_accumsan_tellus_nunc_a_ut_aliquet_fermentum_ornare_vivamus_id_netus_egestas_et_faucibus_id_elementum_eu_vulputate_eget_facilisis_sodales_ipsum_vitae_purus_id_purus_arcu_mus_ac_odio_tristique_viverra_mauris_eget_in_vitae_suspendisse_vel_fermentum_pellentesque_ac_enim_sagittis_platea_orci_fermentum_massa_elit_aliquam_quis_nulla_nibh_pellentesque_ullamcorper_viverra_viverra">Lorem ipsum dolor sit amet consectetur. Interdum sodales duis egestas a nulla aliquam lacinia. Eu elementum blandit nisl ut scelerisque nulla at. Accumsan tellus nunc a ut aliquet fermentum. Ornare vivamus id netus egestas et faucibus. Id elementum eu vulputate eget facilisis sodales ipsum vitae. Purus id purus arcu mus ac odio tristique viverra. Mauris eget in vitae suspendisse vel fermentum. Pellentesque ac enim sagittis platea orci fermentum massa. Elit aliquam quis nulla nibh pellentesque. Ullamcorper viverra viverra.</string>
    <string name="message_players">Message Players</string>
    <string name="message_host">Message Host</string>
    <string name="_12_99_price">$12.99 Price</string>
    <string name="view_players">(View Players)</string>
    <string name="_17_18">17/18</string>
    <string name="join_game">Join Game</string>
    <string name="soccer">Soccer</string>
    <string name="_6_00pm">6:00PM</string>
    <string name="_14035_crenshaw_blvd">14035 crenshaw blvd</string>
    <string name="_12_99">$12.99</string>
    <string name="_3_october">3 October</string>
    <string name="card_ending_in_0334">Card ending in 0334</string>
    <string name="account_balance_5_00">Account Balance: $5.00</string>
    <string name="please_note_the_following_policies">Please note the following policies:</string>
    <string name="by_submitting_payment_you_agree_to_our_terms_and_conditions">By submitting payment, you agree to our Terms and Conditions.</string>
    <string name="confirm_and_pay">Confirm and Pay</string>
    <string name="add_card">Add Card</string>
    <string name="add_as_your_backup_payment_optional">Add as your backup payment \n(optional)</string>
    <string name="pre_paid_cards_can_t_be_used_for_backup_payments">Pre-paid cards can’t be used for backup payments</string>
    <string name="venmo_is_a_service_of_paypal_inc_nmls_id_910457">Venmo is a service of Paypal, Inc. (NMLS ID: 910457)</string>
    <string name="earnings">Earnings</string>
    <string name="current_balance">Current Balance</string>
    <string name="_123_45">$123.45</string>
    <string name="total_host_earnings">Total Host Earnings</string>
    <string name="next_payout">Next Payout</string>
    <string name="on_12_october_24">on 12 October ‘24</string>
    <string name="deposits">Deposits</string>
    <string name="players">Players</string>
    <string name="got_it">Got It</string>
    <string name="add_a_bank_account">Add a bank account</string>
    <string name="bank_account_5589">Bank Account - **** 5589</string>
    <string name="my_games">My Games</string>
    <string name="upcoming">Upcoming</string>
    <string name="monday_week_1">Monday Week 1</string>
    <string name="host_games">Host Games</string>
    <string name="how_it_works">How it works:</string>
    <string name="hosting_is_a_great_opportunity_to_earn_money_while_playing_your_favorite_sports_simply_create_a_game_and_earn_host_s_earn_75_of_all_game_revenues">Hosting is a great opportunity to earn money while playing your favorite sports. Simply, create a game and earn. <b>Host’s earn 75% of all game revenues.</b></string>
    <string name="hosts_must_facilitate_the_starting_and_ending_of_games"><b>•</b> Hosts must facilitate the starting and ending of games</string>
    <string name="hosts_must_reserve_secure_the_playing_field"><b>•</b> Hosts must reserve/secure the playing field</string>
    <string name="hosts_must_provide_all_equipment_balls_goals_etc"><b>•</b> Hosts must provide all equipment (balls, goals, etc.)</string>
    <string name="hosts_are_responsible_for_the_entire_event"><b>•</b> Hosts are responsible for the entire event.</string>
    <string name="my_hosted_games">My Hosted Games</string>
    <string name="host_a_game">Host a Game</string>
    <string name="host_game">Host Game</string>
    <string name="please_fill_up_the_form_to_host_a_new_game">Please fill-up the form to host a new game</string>
    <string name="select_sport">Select Sport</string>
    <string name="repeat">Repeat</string>
    <string name="_1_hr_20_min">1 hr 20 min</string>
    <string name="publish_game">Publish Game</string>
    <string name="refer_friends">Refer Friends</string>
    <string name="refer_and_earn_15">Refer and Earn 15%</string>
    <string name="share_the_fun_and_earn_every_time_your_friends_play">Share the fun and earn every time your friends play.</string>
    <string name="refer_a_friend_invite_your_friends_to_join_pickup_using_your_unique_referral_link">Refer a Friend: Invite your friends to join Pickup using your unique referral link.</string>
    <string name="earn_15_for_every_game_they_pay_to_play_you_ll_earn_15_of_their_game_fee">Earn 15%: For every game they pay to play, you’ll earn 15% of their game fee.</string>
    <string name="unlimited_earnings_there_s_no_cap_the_more_friends_you_refer_the_more_you_can_earn_every_time_they_play">Unlimited Earnings: There’s no cap! The more friends you refer, the more you can earn every time they play.</string>
    <string name="invite_friends_grow_the_community_and_start_earning_today">Invite friends, grow the community, and start earning today!</string>
    <string name="total_referrals">Total Referrals</string>
    <string name="log_in_to_continue">Log In To Continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up1">Sign Up</string>
    <string name="forgot_password1">Forgot Password</string>
    <string name="cancel_game_delete_post"><![CDATA[Cancel Game & Delete Post]]></string>
    <string name="cancel_game_will_delete_this_individual_game_and_refund_all_players_automatically_delete_post_will_cancel_this_game_as_well_as_delete_all_repeat_scheduling">Cancel Game will delete this individual game and refund all players automatically. Delete Post will cancel this game as well as delete all repeat scheduling.</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_game">Cancel Game</string>
    <string name="delete_post">Delete Post</string>
    <string name="piccup_uses_stripe_to_connect_your_account">Piccup uses <b>Stripe</b> to connect your account</string>
    <string name="connect_in_seconds">Connect in seconds</string>
    <string name="_8000_apps_trust_stripe_to_quickly_connect_to_financial_institutions">8000+ apps trust Stripe to quickly connect to financial institutions</string>
    <string name="keep_your_data_sage">Keep your data sage</string>
    <string name="plaid_uses_best_in_class_encription_to_help_protect_your_data">Plaid uses best-in-class encription to help protect your data</string>
    <string name="by_continuing_you_agree_to_stripe_s_privacy_policy_and_to_receiving_updates_on_plaid_com">By continuing, you agree to Stripe’s<b><u><font color='#111827'> Privacy Policy </font></u></b> and to receiving updates on plaid.com</string>
</resources>