<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="callback"
            type="com.pickup.sports.utils.BaseCustomBottomSheet.Listener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_10sdp"
        android:background="@drawable/bg_bottom_sheet">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/loginToContinue"
            style="@style/TextView.Semibold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_18ssp"
            android:textColor="@color/heading_color"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/log_in_to_continue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/bg_edit_text"
            android:backgroundTint="@color/grey_100"
            android:layout_marginTop="@dimen/_30sdp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:inputType="text"
            android:hint="@string/email"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/heading_color"
            android:textColorHint="@color/grey_400"
            app:layout_constraintTop_toBottomOf="@id/loginToContinue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/bg_edit_text"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="@color/grey_100"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/heading_color"
            android:textColorHint="@color/grey_400"
            app:layout_constraintTop_toBottomOf="@id/etEmail"
            app:layout_constraintStart_toStartOf="@id/etEmail"
            app:layout_constraintEnd_toEndOf="@id/etEmail"/>


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/showPassword"
            android:layout_width="@dimen/_14sdp"
            android:layout_height="@dimen/_14sdp"
            android:src="@drawable/iv_show_password"
            android:onClick="@{v->callback.onViewClick(v)}"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="@id/etPassword"
            app:layout_constraintEnd_toEndOf="@id/etPassword"
            app:layout_constraintBottom_toBottomOf="@id/etPassword"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSignIn"
            style="@style/TextView.DmSansMedium"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_edit_text"
            android:backgroundTint="@color/black"
            android:onClick="@{v->callback.onViewClick(v)}"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintTop_toBottomOf="@id/etPassword"
            app:layout_constraintStart_toStartOf="@id/etPassword"
            app:layout_constraintEnd_toEndOf="@id/etPassword"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dontHaveAccount"
            style="@style/TextView.DmSansRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_600"
            android:layout_marginTop="@dimen/_20sdp"
            android:textSize="@dimen/_12ssp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/don_t_have_an_account"
            app:layout_constraintTop_toBottomOf="@id/tvSignIn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/SignUp"
            style="@style/TextView.DmSansMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up1"
            android:onClick="@{v->callback.onViewClick(v)}"
            android:layout_marginStart="@dimen/_5sdp"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="@id/dontHaveAccount"
            app:layout_constraintBottom_toBottomOf="@id/dontHaveAccount"
            app:layout_constraintStart_toEndOf="@id/dontHaveAccount"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/forgotPassword"
            style="@style/TextView.DmSansRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/grey_600"
            android:onClick="@{v->callback.onViewClick(v)}"
            android:text="@string/forgot_password1"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/dontHaveAccount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>