<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.pickup.sports.ui.home_modules.help_module.HelpActivityVm" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.home_modules.help_module.HelpActivity">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/heading"
            style="@style/TextView.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/heading_color"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:padding="@dimen/_3sdp"
            android:src="@drawable/iv_back"
            android:onClick="@{v -> vm.onClick(v)}"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <View
            android:id="@+id/viewLine"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/view_line"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/heading"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvIssue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_an_issue_or_questions_request_a_refund"
            android:textColor="@color/heading_color"
            android:textSize="@dimen/_12ssp"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_20sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmailUs"
            style="@style/TextView.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_us"
            android:textSize="@dimen/_12ssp"
            android:layout_marginTop="@dimen/_40sdp"
            app:layout_constraintTop_toBottomOf="@id/tvIssue"
            app:layout_constraintStart_toStartOf="@id/tvIssue"
            app:layout_constraintEnd_toEndOf="@id/tvIssue"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmail"
            style="@style/TextView.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/heading_color"
            android:text="@string/support_pickup_sports_com"
            app:layout_constraintTop_toBottomOf="@id/tvEmailUs"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>